--- a/css/style.css
+++ b/css/style.css
@@ -295,5 +295,5 @@ footer {
   display: flex;
   justify-content: center;
   margin: 10px;
-  background-color: black;
+  background-color: cyan;
 }
